--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@stripe/react-stripe-js": "^2.9.0",
+    "@stripe/stripe-js": "^5.0.0",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "google-libphonenumber": "^3.2.38",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.453.0",
     "next": "14.1.4",
@@ -31,6 +34,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
+    "react-international-phone": "^4.3.0",
     "react-use": "^17.5.1",
     "sonner": "^1.5.0",
     "swiper": "^11.1.14",
@@ -40,6 +44,7 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@types/google-libphonenumber": "^7.4.30",
     "@types/node": "^20",
     "@types/qs": "^6.9.16",
     "@types/react": "^18",
